@startuml

package com.nurupo.movie.recommend.entity {
    class User {
        -id: Integer;
        -userId: String;
        -movieId: String;
        +getter()
        +setter()
    }
}

package com.nurupo.movie.recommend.entity {
    interface UserRepository {
        +findAllByUserId(userId: String): List<User>
    }
}

JpaRepository <|-- UserRepository
UserRepository ..> User

@enduml